# ispeo

./: .gitignore  README.md  USAGE.md  objective.md  pyproject.toml
data/: data.csv  experiment_data.csv
params/: bounds.yml  init.yml  param-init.yml  params.yml
src/ispeo/: cli.py  fitting.py  io.py  model.py  simulator.py  strategy.py  visualization.py
tests/: test_algorithms.py  test_model.py  test_simulator.py
